--- a/package.json
+++ b/package.json
@@ -16,17 +16,27 @@
     "npm": "please-use-yarn"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.27.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tailwindcss/typography": "^0.5.9",
+    "@tanstack/react-query": "^4.32.6",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.2.1",
+    "@upstash/redis": "^1.22.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.265.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.13",
+    "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -34,13 +44,15 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "cross-env": "^7.0.3",
     "husky": "^8.0.3",
-    "prettier": "^3.0.1"
+    "prettier": "^3.0.1",
+    "prisma": "^5.1.1"
   }
 }
