feat: install prisma and some other dependencies, config the prisma schema

--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
     "npm": "please-use-yarn"
   },
   "dependencies": {
+    "@editorjs/code": "^2.8.0",
     "@editorjs/editorjs": "^2.27.2",
+    "@editorjs/embed": "^2.5.3",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/table": "^2.2.2",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.32.6",
@@ -41,6 +49,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
