--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@editorjs/table": "^2.2.2",
     "@prisma/client": "^5.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.32.6",
     "@types/node": "20.4.10",
