--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@editorjs/list": "^1.8.0",
     "@editorjs/table": "^2.2.2",
     "@prisma/client": "^5.1.1",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@tailwindcss/typography": "^0.5.9",
@@ -42,7 +45,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "lodash.debounce": "^4.0.8",
-    "lucide-react": "^0.265.0",
+    "lucide-react": "^0.263.1",
     "nanoid": "^4.0.2",
     "next": "13.4.13",
     "next-auth": "^4.23.0",
